synonyms don't have a source anymore

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -30,12 +30,12 @@ no-results {
 }
 
 no-results {
-  sql: select * from datasource where url is null or name is null or description is null;
+  sql: select * from datasource where url is null or name is null or description is null
   note: all fields of data source should be filled in
 }
 
 some-results {
-  sql: select * from sequencevariant where id in (select genes from genessequencevariant);
+  sql: select * from sequencevariant where id in (select genes from genessequencevariant)
   note: at least some SequenceVariant objects should have gene references
 }
 some-results {
@@ -52,7 +52,6 @@ no-results {
   sql: select * from intermineobject where id in (select b.id from bioentity b where organismid is null and not exists (select p.id from proteindomain p where b.id = p.id) and not exists (select r.id from interactionregion r where b.id = r.id))
   note: all BioEntity objects should have an organism (exception if ProteinFeature)
 }
-
 
 no-results {
   sql: select gene.id from gene where length > 2000000
@@ -71,7 +70,6 @@ no-results {
   sql: select gene1.primaryidentifier, gene1.id, gene2.primaryidentifier, gene2.id from gene as gene1, gene as gene2 where gene1.primaryidentifier = gene2.primaryidentifier and gene1.id <> gene2.id
   note: no two genes should have the same identifier
 }
-
 
 no-results {
   sql: select protein1.primaryaccession, protein1.id, protein2.primaryaccession, protein2.id from protein as protein1, protein as protein2 where protein1.primaryidentifier = protein2.primaryidentifier and protein1.id <> protein2.id
@@ -105,11 +103,11 @@ no-results {
 #  note: LocatedSequenceFeature.length should equal the length of the Sequence.length (see #669)
 #}
 no-results {
-  sql: select id, length from intermine_sequence where length <= 0;
+  sql: select id, length from intermine_sequence where length <= 0
   note: Sequence.length should be greater than 0
 }
 no-results {
-  sql: select subjectid, sourceid, type, intermine_value, count(*) from synonym group by subjectid, sourceid, type, intermine_value having count(*) > 1
+  sql: select subjectid, type, intermine_value, count(*) from synonym group by subjectid, type, intermine_value having count(*) > 1
   note: If synonym key used correctly for all sources there should be no duplicate synonyms
 }
 no-results {
@@ -186,6 +184,13 @@ no-results {
   sql: select * from protein where name is null and secondaryidentifier is null;
   note: All UniProt proteins should have names
 }
+
+
+no-results {
+  sql: select * from protein where primaryaccession LIKE '%,%';
+  note: 119 isoforms (FlyMine release 16 preview) have commas in their names.
+}
+
 
 #select count(*), o.name from protein p, bioentitiesdatasets b, dataset d, organism o where p.organismid = o.id and b.datasets = p.id and b.bioentities = d.id and (d.title = 'TrEMBL data set' or d.title = 'Swiss-Prot data set') and p.id not in (select genes from genesproteins) group by o.name;
 # count |            name
