fix acceptance test to have the correct columns, now that column headings match the contents

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -132,7 +132,7 @@ no-results {
   note: all MRNAs should have a non-null proteinid
 }
 
-# TODO why does this take so long?
+# FIXME matthew is working on this
 #no-results {
 #  sql: select distinct a1_.id, a1_.primaryidentifier, a1_.name, a2_.id, a2_.primaryidentifier from gene as a1_, intergenicregion as a2_, locatedsequencefeatureoverlappingfeatures as indirect0 where a1_.id = indirect0.overlappingfeatures and indirect0.locatedsequencefeature = a2_.id
 #  note: No genes should overlap IntergenicRegions
@@ -158,11 +158,10 @@ no-results {
   note: flyatlas and affy probesets should merge
 }
 
-# FIXME takes too long
-#no-results {
-#  sql: select distinct t.sourcename, o.shortname, b.class from bioentity b, organism o, tracker t where b.organismid = o.id and t.objectid = b.id and not exists (select * from bioentitiesdatasets where b.id = bioentitiesdatasets.datasets) order by t.sourcename, o.shortname, b.class
-#  note: all bioentities should have at least one dataset. See #1772
-#}
+no-results {
+  sql: select distinct t.sourcename, o.shortname, b.class from bioentity b, organism o, tracker t where b.organismid = o.id and t.objectid = b.id and b.id not in (select bioentities from bioentitiesdatasets) order by t.sourcename, o.shortname, b.class;
+  note: all bioentities should have at least one dataset. See #1772
+}
 
 no-results {
   sql: select title from dataset where id NOT IN (select bioentities from bioentitiesdatasets);
