always give priority to model database over uniprot for gene.identifiers.  remove protein domains from config for now.

--- a/fishmine/dbmodel/resources/genomic_priorities.properties
+++ b/fishmine/dbmodel/resources/genomic_priorities.properties
@@ -17,45 +17,25 @@ BioEntity.organism = \
   go-annotation
 
 BioEntity.name = \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   interpro, \
+  zfin-identifiers, \
   uniprot, \
   *
 
 Gene.primaryIdentifier = \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  wormbase-identifiers, \
-  anopheles-identifiers, \
+  zfin-identifiers, \
   uniprot, \
   *
 
 BioEntity.secondaryIdentifier = \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  wormbase-identifiers, \
-  anopheles-identifiers, \
+  zfin-identifiers, \
   uniprot, \
-  *
-
-Chromosome.sequence = \
-  flybase-dpse-chromosome-fasta, \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  *
-
-Gene.sequence = \
-  flybase-dmel-gene-fasta, \
-  flybase-dpse-gene-fasta, \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   *
 
 BioEntity.primaryIdentifier = \
+  zfin-identifiers, \
   uniprot, \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   *
 
 Protein.sequence = \
@@ -68,33 +48,7 @@ ProteinDomain.shortName = \
   uniprot, \
   *
 
-LocatedSequenceFeature.length = \
-  flybase-dmel-chromosome-fasta, \
-  flybase-dpse-chromosome-fasta, \
-  flybase-dmel-gene-fasta, \
-  flybase-dpse-gene-fasta, \
-  flybase-dana-gene-fasta, \
-  flybase-dere-gene-fasta, \
-  flybase-dgri-gene-fasta, \
-  flybase-dmoj-gene-fasta, \
-  flybase-dper-gene-fasta, \
-  flybase-dsec-gene-fasta, \
-  flybase-dsim-gene-fasta, \
-  flybase-dvir-gene-fasta, \
-  flybase-dwil-gene-fasta, \
-  flybase-dyak-gene-fasta, \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  chado-db-flybase-others, \
-  ensembl-anopheles, \
-  *
-
-
 Gene.symbol = \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  wormbase-identifiers, \
-  anopheles-identifiers, \
+  zfin-identifiers, \
   uniprot, \
-  flyreg, \
   *
