--- a/snpmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/snpmine/dbmodel/resources/genomic_keyDefs.properties
@@ -11,3 +11,5 @@ OntologyTerm.key_name_ontology=name, ontology
 OntologyRelation.key=parentTerm, childTerm, relationship
 OntologyTermSynonym.key=name, type
 Ontology.key_title=title
+
+InfoSource.key_title = title
