modmine meta: added test for link to old wiki pages and removed test for primaryid as synonyms in bioentity

--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -25,6 +25,16 @@ some-results {
 }
 
 no-results {
+  sql: select s.dccid, sd.intermine_value, sd.name, sd.id from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
+  note: To detect bug in the chadoxml.
+}
+
+no-results {
+  sql: select sd.intermine_value, sd.name, sd.id from submissiondata sd where intermine_value like '%oldid%' and submissionid is null
+  note: All submission data should refer to a submission. Plus there is a bug in the chadoxml.
+}
+
+no-results {
   sql: SELECT distinct title from submission where title not in ( SELECT distinct s.title FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome')
   note: All submissions should have features.
 }
@@ -107,10 +117,6 @@ no-results {
 no-results {
   sql: select primaryidentifier, count(*) from bioentity group by primaryidentifier having count(*) > 1
   note: There should be no duplicate primaryidentifier..
-}
-no-results {
-  sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
-  note: all BioEntities should have their primaryidentifier as a synonim
 }
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = g.primaryidentifier and s.subjectid = g.id)) limit 100
