--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -30,6 +30,18 @@ some-results {
   note: we want at least 1 submission.
 }
 
+
+no-results {
+  sql: select s.dccid, sd.intermine_value, sd.name, sd.id from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
+  note: To detect bug in the chadoxml.
+}
+
+no-results {
+  sql: select sd.intermine_value, sd.name, sd.id from submissiondata sd where intermine_value like '%oldid%' and submissionid is null
+  note: All submission data should refer to a submission. Plus there is a bug in the chadoxml.
+}
+
+
 no-results {
   sql: SELECT distinct title from submission where title not in ( SELECT distinct s.title FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome')
   note: All submissions should have features.
@@ -77,9 +89,5 @@ no-results {
 no-results {
   sql: select subjectid, type, intermine_value, count(*) from synonym group by subjectid, type, intermine_value having count(*) > 1
   note: If synonym key used correctly for all sources there should be no duplicate synonyms
-}
-no-results {
-  sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
-  note: all BioEntities should have their primaryidentifier as a synonym
 }
 
