modmine: added and updated some key in the genomic properties

--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -3,7 +3,7 @@ Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
 
 # BioEntity is abstract
-
+Stock.key_primaryidentifier=primaryIdentifier
 Gene.key_primaryidentifier=primaryIdentifier
 Gene.key_secondaryidentifier=secondaryIdentifier, organism
 Gene.key_symbol_org=symbol, organism
@@ -12,7 +12,9 @@ Gene.key_gleanrsymbol=GLEANRsymbol
 Protein.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Protein.key_md5checksum_taxonid=md5checksum, organism
+Protein.key_secondaryidentifier=secondaryIdentifier
 Protein.key_uniprotaccession=uniprotAccession
+Sequence.key_md5checksum=md5checksum
 CDS.key_primaryidentifier=primaryIdentifier
 Chromosome.key_primaryidentifier = primaryIdentifier, organism
 ChromosomeBand.key_identifier_chromosome_org=primaryIdentifier, chromosome, organism
@@ -21,6 +23,7 @@ SuperContig.key_primaryidentifier=primaryIdentifier
 Clone.key_primaryidentifier=primaryIdentifier
 Transcript.key_primaryidentifier=primaryIdentifier
 Transcript.key_secondaryidentifier=secondaryIdentifier
+#MRNA.key_primaryidentifier=primaryIdentifier
 UTR.key_primaryidentifier=primaryIdentifier
 Exon.key_primaryidentifier=primaryIdentifier
 Promoter.key_primaryidentifier=primaryIdentifier
@@ -29,10 +32,8 @@ TFBindingSite.key_primaryidentifier=primaryIdentifier
 DefinedRegion.key_primaryidentifier=primaryIdentifier
 Intron.key_primaryidentifier=primaryIdentifier
 Region.key_primaryidentifier_org=primaryIdentifier, organism
+Synonym.key_synonym = subject, value, type
 
-Stock.key_primaryidentifier=primaryIdentifier
-
-Sequence.key_md5checksum=md5checksum
 
 Motif.key_identifier=primaryIdentifier
 
@@ -75,37 +76,37 @@ RankedRelation.key_all = subject, object, rank
 SimpleRelation.key_all = subject, object
 DistanceRelation.key_all = subject, object
 
-Synonym.key_synonym = subject, value, type
 
 
-ProteinInteraction.key_interaction = shortName, protein
-#ProteinInteractor.key_rpi=role, protein, interaction
-#ProteinInteractionTerm.key_name=name
-ProteinInteractionExperiment.key_name = name
-#ProteinInteractionRegion.key_region = location, interaction, protein
+
+# IntAct and BioGRID
+#InteractionTerm.key_name=name
+#InteractionTerm.key_identifier=identifier
+ #InteractionExperiment.key_name_pub = name, publication
+#InteractionRegion.key_region = location, interaction, gene
+
+ #Interaction.key_interaction = shortName, gene, experiment
+#Interaction.key_name_role = experiment, name, role
+
+
+
+#ProteinInteraction.key_interaction = shortName, protein
+##ProteinInteractor.key_rpi=role, protein, interaction
+##ProteinInteractionTerm.key_name=name
+#ProteinInteractionExperiment.key_name = name
+##ProteinInteractionRegion.key_region = location, interaction, protein
 
 ProteinDomain.key_identifier=primaryIdentifier
 
 OntologyTerm.key_identifier=identifier
 OntologyTerm.key_name_ontology=name, ontology
 OntologyTermSynonym.key=name, type
-
 Ontology.key_title=title
+OntologyRelation.key=parentTerm, childTerm, relationship
 
-# mage
 
-#ReporterLocation.key_all = localX, localY, zoneX, zoneY, design
-#MicroArraySlideDesign.key_name = name, version
 CDNAClone.key_primaryidentifier = primaryIdentifier
 ProbeSet.key_primaryidentifier = primaryIdentifier
-#LabeledExtract.key_all = sample, label, materialType
-
-#Vector.key_primaryidentifier=primaryIdentifier
-
-#Reporter
-#MicroArrayExperiment
-#MicroArrayAssay
-#NuclearDNA.key_identifier
 
 Comment.key_comment = text, type, source
 
@@ -117,7 +118,7 @@ Primer.key_primaryidentifier = primaryIdentifier
 TransposableElementInsertionSite.key_primaryidentifier = primaryIdentifier
 TransposableElementInsertionSite.key_secondaryidentifier = secondaryIdentifier, organism
 Deletion.key_primaryidentifier = primaryIdentifier
-ChromosomalDeletion.key_secondaryidentifier = secondaryIdentifier
+ChromosomeStructureVariation.key_secondaryidentifier = secondaryIdentifier
 SyntenicRegion.key_primaryidentifier = primaryIdentifier
 
 # AnoEST keys
