test for feature locations, genes for isoforms, and duplicate primaryidentifiers
Former-commit-id: c7f1f5c7cee1c2fd6027cf5bfbc875641859d092

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -188,12 +188,25 @@ no-results {
   note: All UniProt proteins should have names
 }
 
-
 no-results {
   sql: select * from protein where primaryaccession LIKE '%,%';
   note: 119 isoforms (FlyMine release 16 preview) have commas in their names.
 }
 
+assert {
+  sql: select count(*) >= 10000 from genesproteins where proteins IN (select id from protein where isuniprotcanonical = false)
+  note: most isoforms should have genes
+}
+
+assert {
+  sql: select count(*) >= 10000 from uniprotfeature where intermine_begin is not null and intermine_end is not null;
+  note: uniprot features should have locations
+}
+
+no-results {
+  sql: select primaryidentifier, count(*) from interactionregion group by primaryidentifier having count(*) > 1;
+  note: there should never be objects with duplicate primaryidentifiers
+}
 
 #select count(*), o.name from protein p, bioentitiesdatasets b, dataset d, organism o where p.organismid = o.id and b.datasets = p.id and b.bioentities = d.id and (d.title = 'TrEMBL data set' or d.title = 'Swiss-Prot data set') and p.id not in (select genes from genesproteins) group by o.name;
 # count |            name
