add another acceptance test

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -199,6 +199,12 @@ assert {
 }
 
 assert {
+  sql:  select count(*) = 1 from genesproteins j, protein p where p.id = j.proteins and p.primaryidentifier = 'LOLA6_DROME-5';
+  note: isoforms should have genes.
+}
+
+
+assert {
   sql: select count(*) >= 10000 from uniprotfeature where intermine_begin is not null and intermine_end is not null;
   note: uniprot features should have locations
 }
