funding text update
Former-commit-id: dac0a117d0a92017c0c8a6f114b8dc9e1ff0850a

--- a/bio/tutorial/malariamine/webapp/resources/web.properties
+++ b/bio/tutorial/malariamine/webapp/resources/web.properties
@@ -31,3 +31,6 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
+
+# colour scheme
+theme = green
