set priorities for main sources
Former-commit-id: 991083ffbba0d3382090216840f2c7f73e390d7e

--- a/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
@@ -4,9 +4,48 @@
 # priority for fields declared in superclass are not overridden by different order in subclass
 # e.g. identfier and organism always have priority as defined in BioEntity
 
-# An example:
-#Gene.symbol = \
-#  wormbase-identifiers, \
-#  uniprot, \
-#  flyreg, \
-#  *
+BioEntity.organism = \
+  *, \
+  ensembl, \
+  go-annotation, \
+  pdb
+
+BioEntity.name = \
+  interpro, \
+  uniprot, \
+  *
+
+Gene.primaryIdentifier = \
+  uniprot, \
+  *
+
+BioEntity.secondaryIdentifier = \
+  uniprot, \
+  *
+
+BioEntity.primaryIdentifier = \
+  uniprot, \
+  *
+
+Protein.sequence = \
+  uniprot-fasta, \
+  uniprot, \
+  *
+
+ProteinDomain.shortName = \
+  interpro,\
+  uniprot, \
+  *
+
+Gene.symbol = \
+  uniprot, \
+  *
+
+DataSet.dataSource = \
+  flymine-static, \
+  *
+
+# temporary fix - description should only be loaded from flymine-static
+DataSet.description = \
+  flymine-static, \
+  *
