--- a/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
@@ -5,6 +5,7 @@ Gene.key_secondaryidentifier=secondaryIdentifier, organism
 Gene.key_symbol_org=symbol, organism
 Gene.key_ncbiGeneNumber=ncbiGeneNumber
 Protein.key_primaryidentifier=primaryIdentifier
+Protein.key_secondaryidentifier=secondaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Protein.key_md5checksum_taxonid=md5checksum, organism
 Sequence.key_md5checksum=md5checksum 
