changed Anopheles PEST to Anopheles in aspects and template queries
Former-commit-id: f7edc9739723ae902bfcea91c74986a796dd878b

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -43,7 +43,7 @@ some-results {
   note: make sure that there are at least some CDSs with lengths shorter than the end-start+1, which is evidence that the CDS lengths are the (sum of the exon lengths - UTR length) see #621
 }
 some-results {
-  sql: select * from organism where name = 'Anopheles gambiae str. PEST'
+  sql: select * from organism where name = 'Anopheles gambiae'
   note: We should have an Anopheles gambiae  object but not an Anopheles gambiae PEST one
 }
 
