--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -111,6 +111,10 @@ no-results {
   note: If synonym key used correctly for all sources there should be no duplicate synonyms
 }
 no-results {
+  sql: select subjectid, intermine_value, count(*) from synonym group by subjectid, intermine_value having count(*) > 1
+  note: synonyms should be unique regardless of type
+}
+no-results {
   sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
   note: all BioEntities should have their identifier as a synonm
 }
