--- a/fishmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/fishmine/dbmodel/resources/genomic_keyDefs.properties
@@ -6,6 +6,7 @@ Gene.key_symbol_org=symbol, organism
 Gene.key_ncbiGeneNumber=ncbiGeneNumber
 Protein.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
+Protein.key_secondaryidentifier=secondaryIdentifier
 Protein.key_md5checksum_taxonid=md5checksum, organism
 Sequence.key_md5checksum=md5checksum
 Synonym.key_synonym = subject, value, type
@@ -24,3 +25,11 @@ OntologyTermSynonym.key=name, type
 Ontology.key_title=title
 Comment.key_comment = text, type, source
 ProteinDomain.key_identifier = primaryIdentifier
+
+# IntAct and BioGRID
+InteractionTerm.key_name=name
+InteractionTerm.key_identifier=identifier
+InteractionExperiment.key_name_pub = name, publication
+InteractionRegion.key_region = location, interaction, gene
+Interaction.key_interaction = shortName, gene, experiment
+Interaction.key_name_role = experiment, name, role
