--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -40,7 +40,7 @@ no-results {
 }
 
 no-results {
-sql: SELECT s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' and lsf.chromosomelocationid is null GROUP BY s.title, lsf.class ORDER BY s.title, lsf.class;
+sql: SELECT s.dccid, s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' and lsf.chromosomelocationid is null GROUP BY s.title, lsf.class ORDER BY s.title, lsf.class;
 note: All features should be located on a chromosome.
 }
 
