--- a/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
@@ -8,6 +8,7 @@ Protein.key_primaryidentifier=primaryIdentifier
 Protein.key_secondaryidentifier=secondaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Protein.key_md5checksum_taxonid=md5checksum, organism
+Protein.key_uniprotaccession=uniprotAccession
 Sequence.key_md5checksum=md5checksum
 Region.key_primaryidentifier_org=primaryIdentifier, organism
 Synonym.key_synonym = subject, value, type
