apply [19055] to all mines

--- a/fishmine/dbmodel/resources/genomic_priorities.properties
+++ b/fishmine/dbmodel/resources/genomic_priorities.properties
@@ -38,6 +38,10 @@ BioEntity.primaryIdentifier = \
   uniprot, \
   *
 
+Protein.primaryAccession = \
+  uniprot, \
+  *
+
 Protein.sequence = \
   uniprot-fasta, \
   uniprot, \
