--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -37,7 +37,7 @@ Gene.symbol = \
   chado-db-wormbase-c_elegans, \
   uniprot, \
   *
- 
+
 LocatedSequenceFeature.length = \
   flybase-dmel-chromosome-fasta, \
   flybase-dmel-gene-fasta, \
@@ -70,6 +70,10 @@ ProteinDomain.shortName = \
 
 Protein.sequence = \
   uniprot-fasta, \
+  uniprot, \
+  *
+
+Protein.primaryAccession = \
   uniprot, \
   *
 
