--- a/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
@@ -27,6 +27,10 @@ BioEntity.primaryIdentifier = \
   uniprot, \
   *
 
+Protein.primaryAccession = \
+  uniprot, \
+  *
+
 Protein.sequence = \
   uniprot-fasta, \
   uniprot, \
