--- a/yeastmine/dbmodel/resources/genomic_priorities.properties
+++ b/yeastmine/dbmodel/resources/genomic_priorities.properties
@@ -34,6 +34,10 @@ BioEntity.primaryIdentifier = \
   uniprot, \
   *
 
+Protein.primaryAccession = \
+  uniprot, \
+  *
+
 Protein.sequence = \
   uniprot-fasta, \
   uniprot, \
