--- a/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
@@ -39,3 +39,6 @@ InteractionExperiment.key_name_pub = name, publication
 InteractionRegion.key_region = location, interaction, gene
 Interaction.key_interaction = shortName, gene, experiment
 Interaction.key_name_role = experiment, name, role
+
+# homologues
+ComputationalAnalysis.key_algorithm = algorithm
