load yeast, don't load bee and anoga paralogues.

--- a/bio/scripts/resources/get_scripts.config
+++ b/bio/scripts/resources/get_scripts.config
@@ -37,9 +37,8 @@ intact	drome
 
 ####get_inparanoid####
 key_inparanoid	DROME
-key_inparanoid	APIME
 key_inparanoid	CAEEL
-key_inparanoid	ANOGA
+key_inparanoid  SACCE
 other_inparanoid	CANFA
 other_inparanoid	DANRE
 other_inparanoid	DICDI
@@ -48,7 +47,6 @@ other_inparanoid	HOMSA
 other_inparanoid	MUSMU
 other_inparanoid	PANTR
 other_inparanoid	RATNO
-other_inparanoid	SACCE
 other_inparanoid	SCHPO
 other_inparanoid	AEDAE
 
