--- a/bio/scripts/resources/get_scripts.config
+++ b/bio/scripts/resources/get_scripts.config
@@ -5,14 +5,14 @@
 #Phil North 04/2007
 
 ####get_uniprot####
-#uniprot	7227
-#uniprot	7237
-#uniprot	6239
-#uniprot	4932
-#uniprot	7165
-#uniprot	7460
-#uniprot	9606
-#uniprot	10090
+uniprot	7227
+uniprot	7237
+uniprot	6239
+uniprot	4932
+uniprot	7165
+uniprot	7460
+uniprot	9606
+uniprot	10090
 uniprot 7955
 
 ####get_go_annotation_taxon_map####
@@ -38,7 +38,7 @@ intact	drome
 ####get_inparanoid####
 key_inparanoid	DROME
 key_inparanoid	CAEEL
-key_inparanoid  SACCE
+key_inparanoid	SACCE
 other_inparanoid	CANFA
 other_inparanoid	DANRE
 other_inparanoid	DICDI
