wrapped text.  it looks better in the wiki

--- a/bio/tutorial/malariamine/malariamine-integration.properties
+++ b/bio/tutorial/malariamine/malariamine-integration.properties
@@ -9,15 +9,17 @@
 # if true will log details about execution time of every query
 os.production.verboseQueryLog=false
 
-# Access to the postgres database into which data will be loaded and queried from the webapp
+# Access to the postgres database into which data will be loaded and 
+# queried from the webapp
 db.production.datasource.serverName=localhost
 db.production.datasource.databaseName=production-malaria
 db.production.datasource.user=test_user
 db.production.datasource.password=test_user
 
 # A temporary database used during the build process, this is re-built
-# as sources are loaded and can be discarded once the warehouse build is complete
-# They use the InterMine 'items' metadata format to describe objects.
+# as sources are loaded and can be discarded once the warehouse build is 
+# complete.  They use the InterMine 'items' metadata format to describe 
+# objects.
 
 # common target items database
 db.common-tgt-items.datasource.serverName=localhost
