fix name of pretend database

--- a/bio/tutorial/malariamine/malariamine-integration.properties
+++ b/bio/tutorial/malariamine/malariamine-integration.properties
@@ -12,9 +12,9 @@ os.production.verboseQueryLog=false
 # Access to the postgres database into which data will be loaded and 
 # queried from the webapp
 db.production.datasource.serverName=localhost
-db.production.datasource.databaseName=production-malaria
-db.production.datasource.user=test_user
-db.production.datasource.password=test_user
+db.production.datasource.databaseName=production-malariamine
+db.production.datasource.user=PSQL_USERNAME
+db.production.datasource.password=PSQL_PASSWORD
 
 # A temporary database used during the build process, this is re-built
 # as sources are loaded and can be discarded once the warehouse build is 
@@ -23,6 +23,6 @@ db.production.datasource.password=test_user
 
 # common target items database
 db.common-tgt-items.datasource.serverName=localhost
-db.common-tgt-items.datasource.databaseName=common-tgt-items-malaria
-db.common-tgt-items.datasource.user=test_user
-db.common-tgt-items.datasource.password=test_user
+db.common-tgt-items.datasource.databaseName=common-tgt-items-malariamine
+db.common-tgt-items.datasource.user=PSQL_USERNAME
+db.common-tgt-items.datasource.password=PSQL_PASSWORD
