better default values

--- a/bio/tutorial/malariamine/malariamine.properties
+++ b/bio/tutorial/malariamine/malariamine.properties
@@ -11,9 +11,9 @@ os.production.verboseQueryLog=false
 
 # Access to the postgres database to build into and access from the webapp
 db.production.datasource.serverName=localhost
-db.production.datasource.databaseName=production-malaria
-db.production.datasource.user=test_user
-db.production.datasource.password=test_user
+db.production.datasource.databaseName=production-malariamine
+db.production.datasource.user=PSQL_USER
+db.production.datasource.password=PSQL_PWD
 
 # Temporary database used during the build process, this is re-built
 # as sources are loaded and can be discarded once the warehouse build is complete
@@ -21,17 +21,17 @@ db.production.datasource.password=test_user
 
 # common target items database
 db.common-tgt-items.datasource.serverName=localhost
-db.common-tgt-items.datasource.databaseName=common-tgt-items
-db.common-tgt-items.datasource.user=test_user
-db.common-tgt-items.datasource.password=test_user
+db.common-tgt-items.datasource.databaseName=common-tgt-items-malariamine
+db.common-tgt-items.datasource.user=PSQL_USER
+db.common-tgt-items.datasource.password=PSQL_PWD
 
 
 # userprofile database - used by the webapp to store logins, query history,
 # saved bags, templates and tags.
 db.userprofile-production.datasource.serverName=localhost
-db.userprofile-production.datasource.databaseName=userprofile-malaria
-db.userprofile-production.datasource.user=test_user
-db.userprofile-production.datasource.password=test_user
+db.userprofile-production.datasource.databaseName=userprofile-malariamine
+db.userprofile-production.datasource.user=PSQL_USER
+db.userprofile-production.datasource.password=PSQL_PWD
 
 
 
@@ -48,8 +48,8 @@ webapp.deploy.url=http://localhost:8080
 webapp.path=malariamine
 
 # tomcat username and password needed to deploy webapp
-webapp.manager=manager
-webapp.password=manager
+webapp.manager=TOMCAT_USER
+webapp.password=TOMCAT_PWD
 
 # 'Home' link
 webapp.baseurl=http://www.flymine.org
