--- a/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_keyDefs.properties
@@ -31,6 +31,9 @@ ComputationalAnalysis.key_algorithm = algorithm
 RankedRelation.key_all = subject, object, rank
 SimpleRelation.key_all = subject, object
 ProteinDomain.key_identifier = primaryIdentifier
+Transcript.key_primaryidentifier = primaryIdentifier
+Exon.key_primaryidentifier = primaryIdentifier
+Chromosome.key_primaryidentifier = primaryIdentifier
 
 # IntAct and BioGRID
 InteractionTerm.key_name=name
