--- a/bio/scripts/resources/get_scripts.config
+++ b/bio/scripts/resources/get_scripts.config
@@ -17,7 +17,7 @@ uniprot 7955
 
 ####get_go_annotation_taxon_map####
 go_taxon	7165	suffix	agp
-go_taxon	7460	suffix	am
+#go_taxon	7460	suffix	am
 
 ####get_go_annotation_gene_association_map####
 go_assoc	flybase	suffix	fb
@@ -52,9 +52,10 @@ other_inparanoid	AEDAE
 
 ####get_ensemblgeneID2peptideID####
 biomart	rnorvegicus	taxon	10116
-biomart	hsapiens	taxon	9606
-biomart	ggallus	taxon	9031
+biomart	hsapiens        taxon	9606
+biomart	ggallus         taxon	9031
 biomart	ptroglodytes	taxon	9598
 biomart	cfamiliaris	taxon	9615
 biomart	aaegypti	taxon	7159
+biomart	agambiae	taxon	7165
 
