--- a/bio/skeletons/mine/webapp/resources/web.properties
+++ b/bio/skeletons/mine/webapp/resources/web.properties
@@ -25,7 +25,7 @@ quickSearch.lists = e.g. example list name
 #     attribute/organism/class combination
 # 5. logo images should be located in bio/webapp/resources/webapp/model/images/
 
-attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=
+attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/pubmed/<<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 
