log everything by default.  we need to be able to debug new intermines easily, and this is usually the properties file new users start out with.

--- a/bio/tutorial/malariamine/malariamine.properties
+++ b/bio/tutorial/malariamine/malariamine.properties
@@ -7,7 +7,7 @@
 #######################
 
 # if true will log details about execution time of every query
-os.production.verboseQueryLog=false
+os.production.verboseQueryLog=true
 
 # Access to the postgres database to build into and access from the webapp
 db.production.datasource.serverName=localhost
