download anopheles homologues

--- a/bio/scripts/resources/get_scripts.config
+++ b/bio/scripts/resources/get_scripts.config
@@ -39,6 +39,7 @@ intact	drome
 key_inparanoid	DROME
 key_inparanoid	CAEEL
 key_inparanoid	SACCE
+key_inparanoid	ANOGA
 other_inparanoid	CANFA
 other_inparanoid	DANRE
 other_inparanoid	DICDI
