add homologue test

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -207,7 +207,6 @@ assert {
   note: isoforms should have genes.
 }
 
-
 assert {
   sql: select count(*) >= 10000 from uniprotfeature where intermine_begin is not null and intermine_end is not null;
   note: uniprot features should have locations
@@ -216,6 +215,11 @@ assert {
 no-results {
   sql: select primaryidentifier, count(*) from interactionregion group by primaryidentifier having count(*) > 1;
   note: there should never be objects with duplicate primaryidentifiers
+}
+
+assert {
+  sql: select count(*) >= 24 from organism where id IN (select g.organismid from gene g, homologue h where g.id = h.geneid group by g.organismid);
+  note: we have homologues from 24 different organisms
 }
 
 #select count(*), o.name from protein p, bioentitiesdatasets b, dataset d, organism o where p.organismid = o.id and b.datasets = p.id and b.bioentities = d.id and (d.title = 'TrEMBL data set' or d.title = 'Swiss-Prot data set') and p.id not in (select genes from genesproteins) group by o.name;
