give sgd-identifiers highest priority.
Former-commit-id: bac21e48ef386b1e6b929fb8fdedb44f95b8f761

--- a/yeastmine/dbmodel/resources/genomic_priorities.properties
+++ b/yeastmine/dbmodel/resources/genomic_priorities.properties
@@ -18,19 +18,23 @@ BioEntity.organism = \
   pdb
 
 BioEntity.name = \
+  sgd-identifiers, \
   interpro, \
   uniprot, \
   *
 
 Gene.primaryIdentifier = \
+  sgd-identifiers, \
   uniprot, \
   *
 
 BioEntity.secondaryIdentifier = \
+  sgd-identifiers, \
   uniprot, \
   *
 
 BioEntity.primaryIdentifier = \
+  sgd-identifiers, \
   uniprot, \
   *
 
@@ -49,6 +53,7 @@ ProteinDomain.shortName = \
   *
 
 Gene.symbol = \
+  sgd-identifiers, \
   uniprot, \
   *
 
