Added priority, need for Transcript.secondaryIdentifier conflict.
Former-commit-id: daf0ed0c1b0499d15115c76a43c8ea645102f756

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -11,6 +11,11 @@ BioEntity.primaryIdentifier = \
   uniprot, \
   *
 
+BioEntity.secondaryIdentifier = \
+  chado-db-flybase-dmel, \
+  modencode-metadata, \
+  *
+
 BioEntity.organism = \
   *, \
   go-annotation
