--- a/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
@@ -10,20 +10,11 @@ BioEntity.organism = \
   go-annotation, \
   pdb
 
-BioEntity.name = \
-  interpro, \
-  uniprot, \
-  *
-
 Gene.primaryIdentifier = \
   uniprot, \
   *
 
-BioEntity.secondaryIdentifier = \
-  uniprot, \
-  *
-
-BioEntity.primaryIdentifier = \
+Gene.secondaryIdentifier = \
   uniprot, \
   *
 
