modmine meta: adjusted priority conf, to check

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -26,16 +26,6 @@ BioEntity.name = \
   uniprot, \
   *
 
-Chromosome.sequence = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
-
-Gene.sequence = \
-  flybase-dmel-gene-fasta, \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans,\
-  *
 
 Gene.symbol = \
   chado-db-flybase-dmel, \
@@ -83,7 +73,7 @@ Protein.primaryAccession = \
   *
 
 # this is temporary until Synonym.source changes to a collection
-Synonym.source = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
+# Synonym.source = \
+#   chado-db-flybase-dmel, \
+#   chado-db-wormbase-c_elegans, \
+#   *
