modmine scripts: changed some log, added sourcing of path (for crontab), new report

--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -5,6 +5,11 @@
 #}
 
 results-report {
+  sql: SELECT s.dccid, s.title, p.surnamepi from submission s, project p where p.id = s.projectid;
+ max-results: 200
+}
+
+results-report {
   sql: SELECT s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' GROUP BY s.title, lsf.class ORDER BY s.title, lsf.class;
  max-results: 200
 }
