goannotation have been fixed and don't create as many objects now

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -21,7 +21,7 @@ assert {
 }
 
 assert {
-  sql: select count(*) >= 1911949 from goannotation
+  sql: select count(*) >= 400000 from goannotation
 }
 
 no-results {
@@ -180,6 +180,11 @@ no-results {
 no-results {
   sql: select * from gene where organismid is null;
   note:  all genes should have an organism
+}
+
+no-results {
+  sql: select * from gene where name is null;
+  note:  all genes should have a name
 }
 
 no-results {
