modmine script: corrected check for deprecation: now should spot updates with distance > 1
Former-commit-id: f4ab6b3c9a1de2d599fd51911be157fe6b87d8af

--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -5,7 +5,7 @@
 #}
 
 results-report {
-  sql: SELECT s.dccid, s.title, p.surnamepi from submission s, project p where p.id = s.projectid;
+  sql: SELECT s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid;
  max-results: 200
 }
 
