--- a/fishmine/dbmodel/resources/genomic_priorities.properties
+++ b/fishmine/dbmodel/resources/genomic_priorities.properties
@@ -33,7 +33,7 @@ BioEntity.secondaryIdentifier = \
   uniprot, \
   *
 
-BioEntity.primaryIdentifier = \
+Protein.primaryIdentifier = \
   zfin-identifiers, \
   uniprot, \
   *
