--- a/fishmine/dbmodel/resources/genomic_precompute.properties
+++ b/fishmine/dbmodel/resources/genomic_precompute.properties
@@ -32,6 +32,9 @@ precompute.query.21 = SELECT a1_.id AS a4_, a3_.name AS a5_, a2_.pubMedId AS a6_
 
 precompute.query.22 = SELECT a1_.id AS a4_, a3_.name AS a5_ FROM Gene AS a1_, Publication AS a2_, Organism AS a3_ WHERE a1_.organism CONTAINS a3_ AND a1_.publications CONTAINS a2_
 
+# GO enrichment queries
+precompute.query.23 = SELECT a1_.id AS a3_, a2_.id AS a4_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE (a1_.organism CONTAINS a2_)
+
 # uniprot keyword widget
 precompute.query.24 = SELECT a1_.id as a5_, a4_.name AS a6_, a2_.name as a7_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.Ontology AS a3_, org.intermine.model.bio.OntologyTerm AS a4_ WHERE (a1_.organism CONTAINS a2_ AND a1_.keywords CONTAINS a4_ AND a4_.ontology CONTAINS a3_ AND a3_.title = 'UniProtKeyword')
 
