--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -5,6 +5,11 @@
 #}
 
 results-report {
+  sql: SELECT s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid;
+ max-results: 200
+}
+
+results-report {
   sql: SELECT s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' GROUP BY s.title, lsf.class ORDER BY s.title, lsf.class;
  max-results: 200
 }
@@ -12,6 +17,11 @@ results-report {
 results-report {
   sql: select substring(class,25), count(*) from intermineobject group by class; 
  max-results: 200
+}
+
+some-results {
+  sql: select name, taxonid from organism where taxonid = '7227' or taxonid = '6239'
+  note: we only want either D. melanogaster (7227) or C. elegans (6239) organisms.
 }
 
 some-results {
@@ -25,9 +35,10 @@ some-results {
 }
 
 no-results {
-  sql: select s.dccid, sd.intermine_value, sd.name, sd.id from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
-  note: To detect bug in the chadoxml.
+  sql: select s.dccid, sd.intermine_value as wikiref, sd.name from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
+  note: To detect bug in the chadoxml and report it to dcc.
 }
+
 
 no-results {
   sql: select sd.intermine_value, sd.name, sd.id from submissiondata sd where intermine_value like '%oldid%' and submissionid is null
@@ -35,7 +46,7 @@ no-results {
 }
 
 no-results {
-  sql: SELECT distinct title from submission where title not in ( SELECT distinct s.title FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome')
+  sql: SELECT distinct s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid and s.dccid not in ( SELECT distinct s.dccid FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome') order by project, s.dccid
   note: All submissions should have features.
 }
 
