--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -37,8 +37,8 @@ some-results {
 
 
 no-results {
-  sql: select s.dccid, sd.intermine_value, sd.name, sd.id from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
-  note: To detect bug in the chadoxml.
+  sql: select s.dccid, sd.intermine_value as wikiref, sd.name from submissiondata sd, submission s where sd.submissionid=s.id and intermine_value like '%oldid%'  
+  note: To detect bug in the chadoxml and report it to dcc.
 }
 
 no-results {
@@ -48,7 +48,7 @@ no-results {
 
 
 no-results {
-  sql: SELECT distinct title from submission where title not in ( SELECT distinct s.title FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome')
+  sql: SELECT distinct s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid and s.dccid not in ( SELECT distinct s.dccid FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome') order by project, s.dccid
   note: All submissions should have features.
 }
 
