Added interaction, interactioRegion and interactionTerm class descriptions.

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -230,7 +230,10 @@ Group=Chromosome groups of Apis mellifera were assembled by joining scaffolds.
 Homologue=Gene with common ancestry. A homologue can be an orthologue (genes separated by the event of speciation) or paralogue (genes separated by the event of genetic duplication).
 Image=Photographic image of the in-situ staining of embryos from mRNA expression studies.
 InfoSource=The source of published information, either a publication or an external database.
+Interaction=An interaction that has been characterised between two or more genes or proteins.  The interaction can be either 'genetic' (i.e. the effect that mutation of a gene has on the phenotype of another gene) or 'physical'  (i.e. an actual physical interaction between two or more proteins).
 InteractionExperiment=The experiment in which a particular interaction was determined.
+interactionRegion=The region of a protein molecule that binds to another protein molecule.
+InteractionTerm=A term describing the type of interaction experiment either from the PSI-MI protein interaction ontology or from the BioGrid classification.
 InterMineObject=The parent class of all other classes in the database.
 InterproEvidence=Extra evidence for InterPro objects.
 Location=The location of one BioEntity on another.
