--- a/yeastmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/yeastmine/dbmodel/resources/genomic_keyDefs.properties
@@ -29,12 +29,4 @@ Comment.key_comment = text, type, source
 ComputationalAnalysis.key_algorithm = algorithm
 RankedRelation.key_all = subject, object, rank
 SimpleRelation.key_all = subject, object
-ProteinDomain.key_identifier = primaryIdentifier
-
-# IntAct and BioGRID
-InteractionTerm.key_name=name
-InteractionTerm.key_identifier=identifier
-InteractionExperiment.key_name_pub = name, publication
-InteractionRegion.key_region = location, interaction, gene
-Interaction.key_interaction = shortName, gene, experiment
-Interaction.key_name_role = experiment, name, role
+Chromosome.key_primaryidentifier = primaryIdentifier, organism
