--- a/yeastmine/dbmodel/resources/genomic_precompute.properties
+++ b/yeastmine/dbmodel/resources/genomic_precompute.properties
@@ -1,4 +1,4 @@
-
+# Bag upload queries
 precompute.query.1 = SELECT a1_.id as a3_, a2_.value as a4_ FROM org.intermine.model.bio.BioEntity AS a1_, org.intermine.model.bio.Synonym AS a2_ WHERE (a1_.synonyms CONTAINS a2_ AND a2_.isPrimary = true)
 
 precompute.query.2 = SELECT a1_.id as a3_, a2_.value as a4_ FROM org.intermine.model.bio.BioEntity AS a1_, org.intermine.model.bio.Synonym AS a2_ WHERE (a1_.synonyms CONTAINS a2_ AND a2_.isPrimary = false)
@@ -12,14 +12,13 @@ precompute.query.5 = SELECT a1_.id as a3_, a2_.name AS a4_ FROM org.intermine.mo
 
 precompute.query.6 = SELECT a1_.id AS a3_, a2_.name AS a4_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE a1_.organism CONTAINS a2_
 
-# protein domain widget
-precompute.query.14 = SELECT a1_, a3_.name as a6_, a4_.primaryIdentifier AS a5_, a4_.name AS a7_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Protein AS a2_, org.intermine.model.bio.Organism AS a3_, org.intermine.model.bio.ProteinDomain AS a4_ WHERE (a1_.organism CONTAINS a3_ AND a1_.proteins CONTAINS a2_ AND a2_.proteinDomains CONTAINS a4_)
+# chromosome distribution widget
+precompute.query.7 = SELECT a2_.id as a4_, a1_.primaryIdentifier AS a5_, a2_.primaryIdentifier AS a6_,  a3_.name as a7_ FROM org.intermine.model.bio.Chromosome AS a1_, org.intermine.model.bio.LocatedSequenceFeature AS a2_, org.intermine.model.bio.Organism AS a3_ WHERE (a2_.chromosome CONTAINS a1_ AND a2_.organism CONTAINS a3_)
 
-precompute.query.15 = SELECT a1_.id as a4_, a3_.primaryIdentifier AS a5_, a3_.name AS a6_, a2_.name as a7_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.ProteinDomain AS a3_ WHERE (a1_.proteinDomains CONTAINS a3_ AND a1_.organism CONTAINS a2_)
+precompute.query.8 = SELECT a3_.primaryIdentifier AS a1_, a4_.primaryIdentifier AS a2_, a4_.id as a6_, a5_.name as a7_ FROM org.intermine.model.bio.Chromosome AS a3_, org.intermine.model.bio.LocatedSequenceFeature AS a4_, org.intermine.model.bio.Organism AS a5_ WHERE (a4_.chromosome CONTAINS a3_ AND a4_.organism CONTAINS a5_)
 
-precompute.query.16 = SELECT a2_.name AS a4_, COUNT(*) AS a5_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.ProteinDomain AS a3_ WHERE a1_.proteinDomains CONTAINS a3_ AND LOWER(a3_.primaryIdentifier) LIKE 'ipr%' AND a1_.organism CONTAINS a2_ GROUP BY a2_.name
+precompute.query.9 = SELECT a5_.name AS a1_, a3_.primaryIdentifier AS a6_, COUNT(*) AS a2_ FROM org.intermine.model.bio.Chromosome AS a3_, org.intermine.model.bio.LocatedSequenceFeature AS a4_, org.intermine.model.bio.Organism AS a5_ WHERE (a4_.chromosome CONTAINS a3_ AND a4_.organism CONTAINS a5_) GROUP BY a5_.name, a3_.primaryIdentifier
 
-precompute.query.17 = SELECT a1_.id AS a4_, a2_.name AS a5_, a3_.id AS a6_, a3_.primaryIdentifier AS a7_, a3_.name AS a8_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.ProteinDomain AS a3_ WHERE a1_.proteinDomains CONTAINS a3_ AND LOWER(a3_.primaryIdentifier) LIKE 'ipr%' AND a1_.organism CONTAINS a2_
 
 # Publications widget
 precompute.query.18 = SELECT a1_.id as a6_, a2_.pubMedId AS a4_, a2_.title AS a5_, a3_.name as a7_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Publication AS a2_, org.intermine.model.bio.Organism AS a3_ WHERE (a1_.organism CONTAINS a3_ AND a1_.publications CONTAINS a2_)
@@ -32,33 +31,40 @@ precompute.query.21 = SELECT a1_.id AS a4_, a3_.name AS a5_, a2_.pubMedId AS a6_
 
 precompute.query.22 = SELECT a1_.id AS a4_, a3_.name AS a5_ FROM Gene AS a1_, Publication AS a2_, Organism AS a3_ WHERE a1_.organism CONTAINS a3_ AND a1_.publications CONTAINS a2_
 
-# uniprot keyword widget
-precompute.query.24 = SELECT a1_.id as a5_, a4_.name AS a6_, a2_.name as a7_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.Ontology AS a3_, org.intermine.model.bio.OntologyTerm AS a4_ WHERE (a1_.organism CONTAINS a2_ AND a1_.keywords CONTAINS a4_ AND a4_.ontology CONTAINS a3_ AND a3_.title = 'UniProtKeyword')
-
-# uniprot features widget
-precompute.query.25 = SELECT a1_.id AS a4_, LOWER(a2_.name) AS a5_, a3_.type AS a6_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.UniProtFeature AS a3_ WHERE a1_.organism CONTAINS a2_ AND a1_.features CONTAINS a3_
-
-precompute.query.26 = SELECT a2_.name AS a4_, COUNT(*) AS a5_ FROM org.intermine.model.bio.Protein AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.UniProtFeature AS a3_ WHERE a1_.organism CONTAINS a2_ AND a1_.features CONTAINS a3_ GROUP BY a2_.name
+# GO enrichment queries
+precompute.query.23 = SELECT a1_.id AS a3_, a2_.id AS a4_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE (a1_.organism CONTAINS a2_)
 
 # GO stats widget
-precompute.query.28 = SELECT DISTINCT a4_.namespace AS a7_, a3_.name AS a8_, a1_.id AS a9_, a4_.identifier AS a10_, a4_.name AS a11_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.GOAnnotation AS a2_, org.intermine.model.bio.Organism AS a3_, org.intermine.model.bio.OntologyTerm AS a4_, org.intermine.model.bio.OntologyTerm AS a5_, org.intermine.model.bio.OntologyRelation AS a6_ WHERE a1_.goAnnotation CONTAINS a2_ AND LOWER(a4_.identifier) != 'go:0008150' AND LOWER(a4_.identifier) != 'go:0003674' AND LOWER(a4_.identifier) != 'go:0005575' AND a2_.ontologyTerm CONTAINS a5_ AND a5_.relations CONTAINS a6_ AND a6_.parentTerm CONTAINS a4_ AND a6_.childTerm CONTAINS a5_ AND a2_.qualifier IS NULL AND a1_.organism CONTAINS a3_
+precompute.query.28 = SELECT DISTINCT a4_.namespace AS a7_, a3_.taxonId AS a8_, a1_.id AS a9_, a4_.identifier AS a10_, a4_.name AS a11_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.GOAnnotation AS a2_, org.intermine.model.bio.Organism AS a3_, org.intermine.model.bio.OntologyTerm AS a4_, org.intermine.model.bio.OntologyTerm AS a5_, org.intermine.model.bio.OntologyRelation AS a6_ WHERE a1_.goAnnotation CONTAINS a2_ AND LOWER(a4_.identifier) != 'go:0008150' AND LOWER(a4_.identifier) != 'go:0003674' AND LOWER(a4_.identifier) != 'go:0005575' AND a2_.ontologyTerm CONTAINS a5_ AND a5_.relations CONTAINS a6_ AND a6_.parentTerm CONTAINS a4_ AND a6_.childTerm CONTAINS a5_ AND a2_.qualifier IS NULL AND a1_.organism CONTAINS a3_
 
+precompute.constructquery.00 = Gene objects +Relation object Chromosome
 precompute.constructquery.01 = Gene synonyms Synonym
 precompute.constructquery.02 = Synonym subject Gene
 precompute.constructquery.03 = BioEntity synonyms Synonym
 precompute.constructquery.04 = Synonym subject BioEntity
-
+precompute.constructquery.05 = +Relation object Gene
+precompute.constructquery.06 = +Relation subject Gene
+precompute.constructquery.11 = +Relation object Chromosome
+precompute.constructquery.12 = +Relation subject Chromosome
+precompute.constructquery.13 = +Relation object Transcript
+precompute.constructquery.14 = +Relation subject Transcript
+precompute.constructquery.15 = +Relation object BioEntity
+precompute.constructquery.16 = +Relation subject BioEntity
+precompute.constructquery.17 = BioEntity objects +Relation object Chromosome
 precompute.constructquery.18 = BioEntity organism Organism
 precompute.constructquery.19 = Gene organism Organism
-precompute.constructquery.20 = Protein organism Organism
+precompute.constructquery.22 = Chromosome organism Organism
 
 precompute.constructquery.23 = BioEntity annotations Annotation
 precompute.constructquery.24 = Gene annotations Annotation
 
+# are 25, 26 still needed?
+precompute.constructquery.25 = Annotation property BioProperty
+precompute.constructquery.26 = BioEntity annotations Annotation property BioProperty
+
 precompute.constructquery.28 = Gene goAnnotation GOAnnotation ontologyTerm OntologyTerm
 precompute.constructquery.29 = Protein genes Gene goAnnotation GOAnnotation ontologyTerm OntologyTerm
 
-precompute.constructquery.35 = Gene proteins Protein
-precompute.constructquery.36 = Protein genes Gene
-
+precompute.constructquery.30 = Gene homologues Homologue homologue Gene
+precompute.constructquery.31 = Gene homologues Homologue homologue Gene organism Organism
 
