--- a/yeastmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/yeastmine/dbmodel/resources/genomic_keyDefs.properties
@@ -30,3 +30,9 @@ ComputationalAnalysis.key_algorithm = algorithm
 RankedRelation.key_all = subject, object, rank
 SimpleRelation.key_all = subject, object
 Chromosome.key_primaryidentifier = primaryIdentifier, organism
+
+# IntAct and BioGRID
+InteractionTerm.key_name=name
+InteractionTerm.key_identifier=identifier
+InteractionExperiment.key_name_pub = name, publication
+Interaction.key_name_role = experiment, name, role
