added help links to skeleton properties file.

--- a/bio/skeletons/mine/webapp/resources/web.properties
+++ b/bio/skeletons/mine/webapp/resources/web.properties
@@ -37,3 +37,13 @@ layout.fixed = begin,template,templates,bag,customQuery,query
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
 theme = grey
+
+
+# Header - these will populate the top right navigation 
+#header.links=help,FAQ,about,cite,software
+#header.links.FAQ=http://trac.flymine.org/wiki/FlyMineFAQ
+#header.links.about=http://blog.flymine.org/?page_id=35
+#header.links.cite=http://blog.flymine.org/?page_id=37
+#header.links.help=http://blog.flymine.org/?page_id=45
+#header.links.software=http://blog.flymine.org/?page_id=39
+
