--- a/bio/core/main/resources/organism_config.properties
+++ b/bio/core/main/resources/organism_config.properties
@@ -1934,3 +1934,6 @@ taxon.1280.abbreviation = Saur
 taxon.44689.genus = Dictyostelium
 taxon.44689.species = discoideum
 taxon.44689.abbreviation = dicty
+taxon.9685.genus = Felis
+taxon.9685.species = catus
+taxon.9685.abbreviation = Fcat
