Fix modMine priorities to correct ProteinDomain.name.
Former-commit-id: d7fe7cf6959d50b72e2fd9ae91a65f3bab094e82

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -20,12 +20,18 @@ BioEntity.organism = \
   *, \
   go-annotation
 
-BioEntity.name = \
+Gene.name = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
+  *
+
+Protein.name = \
   uniprot, \
   *
 
+ProteinDomain.name = \
+  interpro, \
+  *
 
 Gene.symbol = \
   chado-db-flybase-dmel, \
