--- a/bio/webapp/.classpath
+++ b/bio/webapp/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="lib/biojava-1.4cvs.jar"/>
 	<classpathentry kind="lib" path="/intermine-web/lib/jfreechart-1.0.6.jar"/>
 	<classpathentry kind="lib" path="/intermine-web/lib/jcommon-1.0.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math-2.0.jar"/>
 	<classpathentry kind="output" path="build/webapp/WEB-INF/classes"/>
 </classpath>
